gcc/testsuite/rust/compile/features/arbitrary_self_types_not_activated.rs
trait Foo {
    fn bar(self: *const Self); // { dg-error "arbitrary self types are experimental." }
}
